# weisse-wunderstern

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  README_plan.md  SECURITY.md  check_all.py  check_syntax.py  docker-compose.yml  main.py  main_api.py  main_tui.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-extras.txt  requirements.txt  run.sh  smoke_test.py  test_api_client.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
core/: __init__.py  pipeline.py  version.py
docs/: cli_tui_api.md  developer_integration.md  migration_v0.3.md  mock_vs_real_provider.md  release_checklist.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
examples/: sample_crossref_report.md  sample_document_report.md  sample_paper_abstract.md  sample_topic.txt
scripts/: api_smoke.py  check_openapi.py  privacy_audit.py
src/noteforge/: __init__.py  api.py  cli.py  config.py  document_io.py  errors.py  json_tools.py  llm.py  logging.py  models.py  pipeline.py  tui.py  version.py
src/noteforge/providers/: __init__.py  literature.py
src/noteforge/stages/: document.py  (+5 more)
tasks/: __init__.py  t0_document_parsing.py  t1_keyword_extraction.py  t2_literature_search.py  t3_summary_generation.py  t4_report_framework.py  t5_technical_case_analysis.py  t6_policy_assessment.py
tests/: test_api_validation.py  test_cli.py  test_context_manager.py  test_evidence_pipeline.py  test_file_reader.py  test_json_parser.py  test_migration.py  test_models.py  test_requirements_alignment.py  test_state_manager.py  test_t1_schema.py  test_t2_provider.py  test_t3_report.py  test_utilities.py
tests/snapshots/: openapi_v1.json
utils/: context_manager.py  env_loader.py  errors.py  file_reader.py  job_cleanup.py  json_parser.py  llm_client.py  logger.py  state_manager.py
(+8 files in other folders)
