[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noteforge"
dynamic = ["version"]
description = "Evidence-aware topic and document distillation pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hueter" }]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "python-multipart>=0.0.9,<1",
]
documents = [
  "pymupdf>=1.24,<2",
  "pdfplumber>=0.11,<1",
  "PyPDF2>=3,<4",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "python-pptx>=0.6.23,<2",
  "odfpy>=1.4,<2",
  "ebooklib>=0.18,<1",
  "striprtf>=0.0.26,<1",
  "Pillow>=10,<12",
  "pytesseract>=0.3,<1",
]
dev = [
  "build>=1.2,<2",
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
  "pyright>=1.1.390,<2",
]

[project.scripts]
noteforge = "noteforge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "noteforge.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["noteforge"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
include = ["src/noteforge"]
typeCheckingMode = "standard"
pythonVersion = "3.10"
